# quick_flight_options

./: .dockerignore  .gitignore  Dockerfile  README.md  airports.json  flight_options.py  pyproject.toml  requirements.txt
src/: flight_options.py  models.py
src/flyfare/: flight_options.py  models.py
src/skyscan/: flight_options.py  models.py
src/skyscan/data/: airports.json
