[build-system]
requires = ["setuptools==69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "skyscan"
description = "Best flight options"

authors = [
    {name="Tom Ahoi", email="tom@example.com"}
]

license = {text = "MIT"}
requires-python = ">=3.9"


dependencies = [
    "beautifulsoup4==4.12.3",
    "fake-useragent==1.5.1",
    "selenium==4.9.1",
    "pydantic==2.7.1",
    "webdriver-manager==4.0.1"
]


version = "0.1.0"


[project.scripts]
skyscan = "flight_options:main"

